--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-fastapi
-uvicorn[standard]
-pika
-python-dotenv
-numpy
+fastapi==0.115.0
+uvicorn[standard]==0.31.1
+pika==1.3.2
+python-dotenv==1.0.1
+onnxruntime==1.20.0
+# numpy, opencv ติดตั้งผ่าน APT แล้ว
+
+
+
+# sudo apt install -y python3-opencv
+# sudo apt install -y python3-picamera2 python3-libcamera python3-kms++ python3-pyqt5
